--- a/.gitignore
+++ b/.gitignore
@@ -24,7 +24,7 @@
 *.la
 *.a
 *.lib
-!Plugins/*.*/**
+
 
 # Executables
 *.exe
@@ -49,6 +49,9 @@ SourceArt/**/*.tga
 # Binary Files
 Binaries/*
 Plugins/*/Binaries/*
+!Plugins/FMODStudio/Binaries/*.lib
+!Plugins/FMODStudio/Binaries/*.dll
+
 
 # Builds
 Build/*
