--- a/.gitignore
+++ b/.gitignore
@@ -48,6 +48,8 @@ SourceArt/**/*.tga
 # Binary Files
 Binaries/*
 Plugins/*/Binaries/*
+!Plugins/FMODStudio/Binaries/*.lib
+!Plugins/FMODStudio/Binaries/*.dll
 
 # Builds
 Build/*
