--- a/.gitignore
+++ b/.gitignore
@@ -48,8 +48,9 @@ SourceArt/**/*.tga
 # Binary Files
 Binaries/*
 Plugins/*/Binaries/*
-!Plugins/FMODStudio/Binaries/*.lib
-!Plugins/FMODStudio/Binaries/*.dll
+!Plugins/FMODStudio/Binaries/* 
+Plugins/FMODStudio/Binaries/*.pdb
+
 
 # Builds
 Build/*
