Added .dll to fmod plugin

--- a/.gitignore
+++ b/.gitignore
@@ -51,6 +51,7 @@ Plugins/*/Binaries/*
 !Plugins/FMODStudio/Binaries/* 
 Plugins/FMODStudio/Binaries/Win64/*.pdb
 !Plugins/FMODStudio/Binaries/Win64/*.lib
+!Plugins/FMODStudio/Binaries/Win64/*.dll
 
 
 # Builds
