--- a/.gitignore
+++ b/.gitignore
@@ -49,7 +49,7 @@ SourceArt/**/*.tga
 Binaries/*
 Plugins/*/Binaries/*
 !Plugins/FMODStudio/Binaries/* 
-Plugins/FMODStudio/Binaries/Win64/*.pdb
+Plugins/FMODStudio/Binaries/Win64/*
 !Plugins/FMODStudio/Binaries/Win64/*.lib
 !Plugins/FMODStudio/Binaries/Win64/*.dll
 
