--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -11,7 +11,7 @@ ThreePlayerSplitscreenLayout=FavorTop
 GameInstanceClass=/Script/Engine.GameInstance
 GameDefaultMap=/Game/Maps/Level1.Level1
 ServerDefaultMap=/Engine/Maps/Entry
-GlobalDefaultGameMode=/Script/RacingPrototype.RacingPrototypeGameMode
+GlobalDefaultGameMode=/Game/BP/WildRacing_GameMode.WildRacing_GameMode_C
 GlobalDefaultServerGameMode=None
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
