added audi, small fixes to vehicle

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -7,7 +7,7 @@ Build=IfProjectHasCode
 BuildConfiguration=PPBC_Development
 BuildTarget=
 StagingDirectory=(Path="")
-FullRebuild=False
+FullRebuild=True
 ForDistribution=False
 IncludeDebugFiles=False
 BlueprintNativizationMethod=Disabled
@@ -50,5 +50,4 @@ bSkipMovies=False
 +IniKeyBlacklist=IniKeyBlacklist
 +IniKeyBlacklist=IniSectionBlacklist
 +DirectoriesToAlwaysStageAsNonUFS=(Path="FMOD")
-
 
