--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -9,7 +9,7 @@ bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/Maps/Level1.Level1
+GameDefaultMap=/Game/Maps/TigerStadiumFlat.TigerStadiumFlat
 ServerDefaultMap=/Engine/Maps/Entry
 GlobalDefaultGameMode=/Game/BP/WildRacing_GameMode.WildRacing_GameMode_C
 GlobalDefaultServerGameMode=None
