adding quit ability

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,14 +2,14 @@
 bSubstepping=True
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Maps/Level1.Level1
+EditorStartupMap=/Game/Maps/MainMenuLevel.MainMenuLevel
 LocalMapOptions=
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/Maps/TigerStadiumFlat.TigerStadiumFlat
+GameDefaultMap=/Game/Maps/MainMenuLevel.MainMenuLevel
 ServerDefaultMap=/Engine/Maps/Entry
 GlobalDefaultGameMode=/Game/BP/WildRacing_GameMode.WildRacing_GameMode_C
 GlobalDefaultServerGameMode=None
@@ -31,3 +31,7 @@ TargetedHardwareClass=Desktop
 AppliedTargetedHardwareClass=Desktop
 DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
+
+[/Script/WindowsTargetPlatform.WindowsTargetSettings]
+Compiler=VisualStudio2019
+
