--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -3,7 +3,7 @@ ProjectID=1F8430264992466D6A81B481EEBCBAB0
 ProjectName=Vehicle Game Template
 
 [/Script/UnrealEd.ProjectPackagingSettings]
-Build=IfProjectHasCode
+Build=Always
 BuildConfiguration=PPBC_Development
 BuildTarget=
 StagingDirectory=(Path="")
