added UI elements

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -8,7 +8,7 @@ TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
-GameInstanceClass=/Script/Engine.GameInstance
+GameInstanceClass=/Game/BP/GameInstance.GameInstance_C
 GameDefaultMap=/Game/Maps/Level1.Level1
 ServerDefaultMap=/Engine/Maps/Entry
 GlobalDefaultGameMode=/Script/RacingPrototype.RacingPrototypeGameMode
