--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -9,7 +9,7 @@ bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 GameInstanceClass=/Game/BP/GameInstance.GameInstance_C
-GameDefaultMap=/Game/Maps/Level1.Level1
+GameDefaultMap=/Game/Maps/MainMenuLevel.MainMenuLevel
 ServerDefaultMap=/Engine/Maps/Entry
 GlobalDefaultGameMode=/Game/BP/WildRacing_GameMode.WildRacing_GameMode_C
 GlobalDefaultServerGameMode=None
@@ -37,4 +37,3 @@ Compiler=VisualStudio2019
 
 [/Script/FMODStudio.FMODSettings]
 BankOutputDirectory=(Path="FMOD/Desktop")
-
