some updates, added camera movement

--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -180,6 +180,12 @@ DoubleClickTime=0.200000
 +AxisMappings=(AxisName="MoveRight",Scale=1.000000,Key=MagicLeap_Right_Trackpad_X)
 +AxisMappings=(AxisName="ReverseCam",Scale=1.000000,Key=Tab)
 +AxisMappings=(AxisName="ReverseCam",Scale=1.000000,Key=Gamepad_LeftShoulder)
++AxisMappings=(AxisName="camforward",Scale=1.000000,Key=I)
++AxisMappings=(AxisName="camforward",Scale=-1.000000,Key=K)
++AxisMappings=(AxisName="CamRight",Scale=1.000000,Key=L)
++AxisMappings=(AxisName="CamRight",Scale=-1.000000,Key=J)
++AxisMappings=(AxisName="CamUp",Scale=1.000000,Key=O)
++AxisMappings=(AxisName="CamUp",Scale=-1.000000,Key=U)
 DefaultTouchInterface=/Game/Vehicle/Sedan/SedanVirtualJoysticks.SedanVirtualJoysticks
 -ConsoleKeys=Tilde
 +ConsoleKeys=Tilde
